# portalbrasil-intranet

./: .editorconfig  CHANGELOG.md  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
.github/: CODEOWNERS
backend/: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  Dockerfile.demo  LICENSE.md  MANIFEST.in  Makefile  README.md  instance.yaml  mx.ini  pyproject.toml
backend/news/: #initial.feature  10.internal  22.internal  3.feature  5.feature  9.documentation
backend/scripts/: create_site.py  default.json
backend/src/plonegovbr/intranet/: __init__.py  configure.zcml  dependencies.zcml  distributions.zcml  handlers.py  permissions.zcml  profiles.zcml  testing.py
backend/src/plonegovbr/intranet/behaviors/: configure.zcml  contato.py  endereco.py  matricula.py
backend/src/plonegovbr/intranet/content/: area.py  colaborador.py  servico.py
backend/src/plonegovbr/intranet/controlpanel/: configure.zcml
backend/src/plonegovbr/intranet/distributions/intranet/: profiles.json  schema.json
backend/src/plonegovbr/intranet/distributions/intranet/content/content/: __metadata__.json
backend/src/plonegovbr/intranet/indexers/: area.py  configure.zcml
backend/src/plonegovbr/intranet/locales/: plonegovbr.intranet.pot  update.py
backend/src/plonegovbr/intranet/locales/en/LC_MESSAGES/: plonegovbr.intranet.mo  plonegovbr.intranet.po
backend/src/plonegovbr/intranet/locales/pt_BR/LC_MESSAGES/: plonegovbr.intranet.mo  plonegovbr.intranet.po
backend/src/plonegovbr/intranet/profiles/default/: actions.xml  browserlayer.xml  catalog.xml  metadata.xml  rolemap.xml  types.xml
backend/src/plonegovbr/intranet/profiles/default/registry/: plone.app.discussion.interfaces.IDiscussionSettings.xml  plone.app.querystring.interfaces.IQueryField.xml  plone.base.interfaces.controlpanel.INavigationSchema.xml
backend/src/plonegovbr/intranet/profiles/default/types/: Area.xml  Colaborador.xml  Document.xml  News_Item.xml  Servico.xml
backend/src/plonegovbr/intranet/profiles/default/workflows/simple_intranet_workflow/: definition.xml
backend/src/plonegovbr/intranet/profiles/default/workflows/two_state_workflow/: definition.xml
backend/src/plonegovbr/intranet/profiles/restricted/: workflows.xml
backend/src/plonegovbr/intranet/profiles/restricted/workflows/simple_intranet_workflow/: definition.xml
backend/src/plonegovbr/intranet/profiles/restricted/workflows/two_state_workflow/: definition.xml
backend/src/plonegovbr/intranet/serializers/: area.py  colaborador.py  configure.zcml  summary.py
backend/src/plonegovbr/intranet/setuphandlers/: __init__.py  demo.py
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/: discussions.json  relations.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/: __metadata__.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/0f37fe34245f439ba78901e36f6da9dc/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/0f70ad1edb4b4baab3fd39ee0817f0ea/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/12da9643d3ab4671ab995ca620900922/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/17b06e11b95941f08a6c483d0869f69d/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/1eb1b5c533dc4cb8b3faff4eb8750785/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/26e5fc286fce4c2e9613411cc0f0663f/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/42bb0222abfe4356949de633f5cc25e6/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/478d8e09dc85468a85125df5caec7342/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/616403f8459349feab36daba645b95d9/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/62f52ef944a1485893df3a7248f6eba5/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/7bc5679d36c44d7ea81663b0595c6be0/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/8741d333db4c4736957db5742906aba6/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/87b599b4dd5a419da58c59632bace85c/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/9575155bfeb4440bb719d3c96ed43da4/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/9b37dfbe71ba477791e511975741e6b0/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/ab9796ee584142ceb86df51343cee5e0/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/abcd08c1843b4540b90cb73b9e9fc050/: data.json
backend/src/plonegovbr/intranet/setuphandlers/examplecontent/content/b31a223c7b0b4146b8b17b640b9d39e1/: data.json
backend/src/plonegovbr/intranet/upgrades/: configure.zcml
backend/src/plonegovbr/intranet/utils/: constrains.py
backend/src/plonegovbr/intranet/vocabularies/: areas.py  configure.zcml  gestores.py  workflow.py
backend/tests/: conftest.py
backend/tests/distribution/: test_creation.py  test_distribution.py  test_registration.py
backend/tests/setup/: test_setup_install.py
frontend/: .eslintrc.js  CHANGELOG.md  (+6 more)
(+31 files in other folders)
